<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Autonomes Fahrzeug</string>
    <!--Main Menu-->
    <string name="intro_text">AppName</string>
    <string name="mainMenu">Main Menu</string>
    <string name="btn_manual">Manual Mode</string>
    <string name="btn_autonom">Autonomous Mode</string>
    <string name="btn_settings">Settings</string>
    <string name="app_logo">Logo für die App</string>


    <string name="backToInitMenu">Back</string>

    <!--Manual-->
    <string name="steering">steering</string>
    <string name="throttle">throttle</string>
    <string name="steeringDirection">steering direction</string>
    <string name="btn_start_text">start</string>
    <string name="btn_stop_text">stop</string>

    <!--Settings-->
    <string name="framerateChoose">Choose a frame rate</string>
    <string name="whichNn">Choose a neuronal network for the autonomous mode</string>
    <string name="resolutionChoose">Choose a camera resolution</string>
    <string name="cameraCaptureArea">Choose an area of interest for the neuronal network</string>
    <string name="cameraCaptureAreaButton">Accept area of interest</string>
    <string name="whichCamera">Choose a camera</string>
    <string name="saveSettings">Save Settings on Server</string>
    <string name="boardIp">ESP32 IP-address</string>
    <string name="smartphonePort">Smartphone port</string>
    <string name="boardPort">ESP32 port</string>
    <string name="datasetDelete">Delete dataset</string>
    <string name="datasetsUpload">upload dataset</string>
    <string name="nnDelete">delete neuronal network</string>
    <string name="nnDownload">download neuronal network</string>
    <string name="serverPort">Server port</string>
    <string name="serverIp">Server IP-address</string>
    <string name="serverPassword">Server user password</string>
    <string name="serverUser">server user</string>

    <string name="udpTitle">UDP Connection</string>
    <string name="sftpTitle">SFTP Connection</string>
    <string name="cameraTitle">Camera</string>
    <string name="controlTitle">Control</string>
    <string name="nnTitle">Neuronal Networks</string>
    <string name="datasetsTitle">Datasets</string>
    <string name="framesPerSecondString">frames per second</string>
    <string name="backcamera">backcamera</string>
    <string name="areaOfInterestText">The area of interest has a resolution of</string>
    <string name="whichNnDownload">Choose a neuronal network to download</string>
    <string name="dontSaveDataset">Drive without saving a dataset</string>
    <string name="withLense">Use a Lense</string>
    <string name="lenseName">Name of the lense</string>


    <string name="connectedESP">Connected to ESP32</string>
    <string name="notConnectedESP">Not connected to ESP32</string>
    <string name="connectedServer">Connected to SFTP-Server</string>
    <string name="notConnectedServer">Not connected to SFTP-Server</string>
    <string name="resolution">resolution</string>
    <string name="framerate">framerate</string>
    <string name="picturesTaken">Pictures taken</string>
    <string name="calibrationPicture">calibration picture</string>
    <string name="left">left</string>
    <string name="straight">straight</string>
    <string name="right">right</string>
    <string name="noContoller">No Controller connected</string>
    <string name="connectController">Please connect a Controller!</string>
    <string name="neuronalNetworkPath">Path of the neuronal network you want to download</string>
    <string name="start">start action</string>
    <string name="stop">stop action / back</string>
    <string name="changeMode">change mode</string>
    <string name="uploadNotebook">Upload training notebook</string>
    <string name="notebookTitle">Training notebook</string>
    <string name="noSftpConnection">There is no connection to the sftp server!</string>
    <string name="loading">Loading...</string>
    <string name="nameSettings">How would you like to name the settings file on the sftp server?</string>
    <string name="loadSettingsButton">Download settings file</string>
    <string name="loadSettingsTextView">Choose a settings file to download</string>
    <string name="noNeuronalNetwork">You have to choose a neuronal network in the settings</string>
    <string name="button_conf">Button Configuration</string>

</resources>