<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ActivityManualMode">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Switch
            android:id="@+id/switch_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dontSaveDataset" />

        <Switch
            android:id="@+id/switch_objectiv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/withLense" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lenseName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lenseName"
            android:inputType="text"
            android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView_connected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notConnectedESP" />

        <TextView
            android:id="@+id/textView_fps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:id="@+id/textViewAuflösung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView_anzahlBilder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

    </LinearLayout>

    <TextureView
        android:id="@+id/textureView"
        android:layout_width="240dp"
        android:layout_height="320dp"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">



        <TextView
            android:id="@+id/textView_geschwindigkeit_fern"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/throttle"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView_Lenkwinkel_fern"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/steering"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView_lenkrichtung_fern"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/steeringDirection"
            android:textSize="16sp" />

        <!--
        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="16sp"
            tools:text="@string/Geschwindigkeit" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            tools:text="@string/Lenkwinkel" />


        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/Lenkrichtung"
            android:textSize="16sp" />
        -->
        <Button
            android:id="@+id/bilderAufnehmen"
            style="@style/btn_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/btn_start_text" />


    </LinearLayout>

</LinearLayout>