<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityMainMenu">

    <LinearLayout
        android:id="@+id/hauptmenuLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/intro_Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <!--
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10dp"
                android:text="@string/intro_text" />
                -->

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/app_logo"
                android:src="@drawable/auto_logo" />

        </LinearLayout>


        <!--ButtonLayout-->
        <LinearLayout
            android:id="@+id/option"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_fernsteuern_id"
                style="@style/btn_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:onClick="toManualMode"
                android:text="@string/btn_manual"
                android:typeface="serif" />

            <Button
                android:id="@+id/btn_autonom_id"
                style="@style/btn_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:onClick="toAutoMode"
                android:text="@string/btn_autonom"
                android:typeface="serif" />

            <Button
                android:id="@+id/btn_einstellung_id"
                style="@style/btn_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:onClick="toSettings"
                android:text="@string/btn_settings"
                android:typeface="serif" />



        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>